Comment on unused API methods
